<resources>
    <string name="app_name">Smart Transfer</string>
    <string name="get_started">Get Started</string>
    <string name="quick_data_transfer_no_delays_just_smooth_sharing">Quick data transfer no delays, just smooth sharing ! 🚀</string>
    <string name="todo">TODO</string>

    <string name="terms_privacy_text">For further information please check it out our <b><font color='#1C80F7'>privacy policy</font></b> and <b><font color='#1C80F7'>Terms &amp; Condition</font></b></string>

    <string name="skip">Skip</string>

    <string name="onboarding_title_1">Mobile to PC <font color='#1C80F7'>Sync</font></string>
    <string name="onboarding_title_2">Cross-Platform  <font color='#1C80F7'>Transfer</font></string>
    <string name="onboarding_title_3">Multi-device <font color='#1C80F7'>Transfer</font></string>


    <string name="onboarding_desc_1"><b>Seamlessly</b> share files between your devices </string>
    <string name="onboarding_desc_2">Easily transfer files between <b>Android &amp; iOS </b></string>
    <string name="onboarding_desc_3">Quickly share files between multiple <b>browsers &amp; devices</b></string>


    <string name="available_storage">Available Storage</string>

    <string name="test2">For more details, check our <b><font color='#1C80F7'>Privacy Policy</font></b> and <b><font color='#1C80F7'>Terms &amp; Conditions</font></b>.</string>
    <string name="title_activity_uploading">UploadingActivity</string>

    <string name="note_text"><b><font color="#000000">Note:</font></b> <font color="#808080">The below key is valid for 24 hours and will be automatically deleted thereafter.</font></string>
    <string name="smarttransfer">Smart Transfer</string>
    <string name="selected_app_language">Selected App Language</string>
    <string name="selected_language">Selected Language</string>
    <string name="all_language">All Language</string>
    <string name="done">Done</string>
    <string-array name="languages" translatable="false">
        <item>en</item>
        <item>zh</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_transfer">Smart Transfer</string>
    <string name="share_file">Share File</string>
    <string name="share_your_files">Share your Files</string>
    <string name="receive_your_files">Receive your Files</string>
    <string name="receive">Receive</string>
    <string name="remotely_share">Remotely Share</string>
    <string name="android_to_ios">Android to Ios</string>
    <string name="instantly_remotely_transfer_data_via_link">Instantly Remotely transfer data via link</string>
    <string name="mobile_to_pc">Mobile To Pc</string>
    <string name="grant_access">Grant Access</string>
    <string name="for_smooth_transfer_many_permissions_are_required_due_to_android_limitations">For smooth transfer, many permissions are required due to Android limitations.</string>
    <string name="enable_location_service">Enable Location Service</string>
    <string name="needs_location_access_to_ensure_accurate_device_discovery_and_seamless_file_transfers">Needs location access to ensure accurate device discovery and seamless file transfers</string>
    <string name="enable_wi_fi">Enable Wi-Fi</string>
    <string name="wi_fi_is_required_for_fast_and_seamless_file_transfers_between_devices">Wi-Fi is required for fast and seamless file transfers between devices.</string>
    <string name="enable_nearby_devices_permission">Enable Nearby Devices Permission</string>
    <string name="needed_to_connect_and_transfer_files_with_nearby_devices">Needed to connect and transfer files with nearby devices.</string>
    <string name="cancel">Cancel</string>
    <string name="we_do_not_access_or_share_your_personal_data">We do not access or share your personal data.</string>
    <string name="to_provide_you_with_the_best_experience_this_app_needs_access_to_your_storage_to_save_and_manage_files">To provide you with the best experience, this app needs access to your storage to save and manage files.</string>
    <string name="why_we_need_this_permission">Why we need this permission</string>
    <string name="we_need_your_help">We need your help</string>
    <string name="history">History</string>
    <string name="please_wait_your_data_is_uploading">Please wait, your data is uploading</string>
    <string name="uploading">Uploading ...</string>
    <string name="paste_link_here">Paste link here</string>
    <string name="title_activity_web_view_recevier">WebViewRecevier</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="make_sure_both_the_sender_and_receiver_are_connected_to_the_same_wi_fi_network_do_not_go_back_or_stop_sharing_as_it_will_break_the_connection">Make sure both the sender and receiver are connected to the same Wi-Fi network. Do not go back or stop sharing, as it will break the connection.</string>
    <string name="title_activity_receiver_http">ReceiverHttpActivity</string>
    <string name="downloading">Downloading</string>
    <string name="quick_data_transfer_remote_sharing"><![CDATA[Quick Data Transfer & Remote Sharing]]></string>
    <string name="powered_by_switch_apps_studio">Powered by Switch Apps Studio</string>
    <string name="start_sharing">Start Sharing</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="all_languages">All Languages</string>

</resources>

