<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.remoltyshare.UploadingFilesActivity">
    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/uploadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/circle_shape"
                android:indeterminate="false"

                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/circular_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0%"
                android:textColor="@color/app_blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvUploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/uploading"
            android:textColor="@color/app_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWaitMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_wait_your_data_is_uploading"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/congratslayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/ic_congrats" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Congratulations"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Data upload successfully" />

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/note_text"

            android:textColor="@color/grey"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_button2"
            android:backgroundTint="@color/white_e3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uniqueIdText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:text="------"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/copyIpImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="12dp"
                app:srcCompat="@drawable/ic_text_copy" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="OR"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icQr"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_qr_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>